# silvasonic

./: .clean_patterns  .containerignore  .cursorrules  .dockerignore  .env  .env.example  .gitignore  .keep  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  COMMANDS.md  LICENCE  Makefile  README.md  ROADMAP.md  TIER2_ROADMAP.md  VISION.md  audit_report_controller.md  compose.yml  conftest.py  index.html  justfile  mkdocs.yml  podman-compose.yml  pyproject.toml  sitemap.xml
.gemini/: AGENTS.md
services/birdnet/: Containerfile  Dockerfile  README.md  index.html  pyproject.toml
services/birdnet/src/silvasonic/birdnet/: __init__.py  __main__.py  birdnet_stats.py  service.py  settings.py
services/birdnet/tests/integration/: conftest.py  test_backlog_metrics.py  test_clip_pipeline.py  test_worker_pull.py
services/birdnet/tests/unit/: test_birdnet_stats.py  test_clip_extraction.py  test_heartbeat.py  test_worker.py
services/controller/: Containerfile  Dockerfile  README.md  coverage.xml  index.html  pyproject.toml
services/controller/config/: defaults.yml
services/controller/config/profiles/: audiomoth_usb.yml  generic_usb.yml  rode_nt_usb.yml  ultramic_192k.yml  ultramic_384_evo.yml
services/controller/src/silvasonic/controller/: __init__.py  __main__.py  bootstrap.py  container_manager.py  container_spec.py  controller_stats.py  device_repository.py  device_scanner.py  hardware.py  log_forwarder.py  main.py  messaging.py  nudge_subscriber.py  orchestrator.py  podman_client.py  profile_matcher.py  profiles.py  reconciler.py  seeder.py  services.py  settings.py  storage_checks.py  worker_evaluator.py  worker_registry.py
services/controller/tests/: test_controller.py  test_hardware.py  test_logic.py  test_messaging.py  test_orchestrator.py  test_profiles.py
services/controller/tests/integration/: conftest.py  mic_profiles_refresh.py  test_audio_recording.py  test_config_reload.py  test_controller_emergency.py  test_controller_lifecycle.py  test_controller_orchestration.py  test_crash_recovery.py  test_device_detection_db.py  test_device_repository.py  test_device_scanner_db.py  test_device_state_evaluator.py  test_log_forwarder.py  test_nudge_subscriber.py  test_podman_lifecycle.py  test_podman_socket.py  test_profile_matcher.py  test_recorder_spawn_flow.py  test_seeder.py  test_system_worker_evaluator.py
services/controller/tests/unit/: test_bootstrap.py  test_cloud_sync_seeder.py  test_container_manager.py  test_container_spec_recorder.py  test_container_spec_worker.py  test_controller.py  test_controller_stats.py  test_device_detection.py  test_device_repository.py  test_device_scanner.py  test_hardware.py  test_log_forwarder.py  test_logic.py  test_nudge_subscriber.py  test_orchestrator.py  test_phase2_phase3.py  test_podman_client.py  test_profile_matcher.py  test_profiles.py  test_reconciler.py  test_reconciler_heartbeat.py  test_seeder.py  test_seeder_unit.py  test_services.py  test_settings.py  test_worker_evaluator.py
services/db-viewer/: Containerfile  README.md  package.json  pyproject.toml
services/db-viewer/src/silvasonic/db_viewer/: __main__.py
services/db-viewer/src/silvasonic/db_viewer/templates/: index.html  layout.html  query.html  query_results.html  table_snippet.html
services/db-viewer/tests/integration/: test_db_viewer.py
services/processor/: Containerfile  Dockerfile  README.md  index.html  pyproject.toml
services/processor/src/silvasonic/processor/: __init__.py  __main__.py  indexer.py  janitor.py  reconciliation.py  settings.py  upload_worker.py
services/processor/src/silvasonic/processor/modules/: __init__.py  audit_logger.py  flac_encoder.py  indexer_stats.py  janitor_stats.py  path_builder.py  rclone_client.py  upload_stats.py  work_poller.py
services/processor/tests/integration/: conftest.py  test_flac_encoder_e2e.py  test_indexer.py  test_indexer_e2e.py  test_janitor.py  test_janitor_e2e.py  test_processor_lifecycle.py  test_rclone_minio.py  test_reconciliation.py  test_reconciliation_e2e.py  test_upload_pipeline_e2e.py  test_upload_worker.py
services/processor/tests/unit/: test_flac_encoder.py  test_indexer.py  test_indexer_stats.py  test_janitor.py  test_janitor_stats.py  test_path_builder.py  test_processor.py  test_rclone_client.py  test_reconciliation.py  test_upload_stats.py  test_upload_worker.py  test_work_poller.py
services/recorder/: Containerfile  Dockerfile  README.md  index.html  pyproject.toml
services/recorder/config/profiles/: generic_usb.yml  laptop_internal.yml  rode_nt_usb.yml  ultramic_384_evo.yml
services/recorder/src/silvasonic/recorder/: __init__.py  __main__.py  ffmpeg_pipeline.py  healthcheck.py  main.py  manager.py  pipeline.py  recording_stats.py  schemas.py  settings.py  stream.py  watchdog.py  workspace.py
services/recorder/tests/: conftest.py  test_integration.py  test_manager.py  test_recorder.py  test_stream.py  test_stream_unit.py
services/recorder/tests/integration/: conftest.py  test_pipeline_e2e.py  test_recorder_lifecycle.py  test_watchdog_recovery.py  test_wav_validity.py
services/recorder/tests/unit/: __init__.py  test_manager.py  test_mock_source.py  test_pipeline.py  test_recorder.py  test_recording_stats.py  test_stream.py  test_stream_unit.py  test_watchdog.py  test_workspace.py
services/status-board/: Dockerfile  MANIFEST.in  README.md  pyproject.toml
services/status-board/src/silvasonic/status_board/: config.py  main.py  schemas.py  services.py  subscriber.py
services/status-board/src/silvasonic/status_board/routes/: __init__.py
services/status-board/tests/: test_sb_config.py  test_sb_main.py  test_sb_routes.py  test_sb_services.py  test_subscriber.py
services/status-board/tests/unit/: test_sb_config.py  test_subscriber.py
services/web-mock/: Containerfile  README.md  color_comparison.html  package.json  pyproject.toml  test.html
services/web-mock/src/silvasonic/web_mock/: __init__.py  __main__.py  mock_data.py  settings.py
services/web-mock/tests/integration/: test_web_mock_lifespan.py
services/web-mock/tests/unit/: test_web_mock.py
(+432 files in other folders)
