[project]
name = "silvasonic"
version = "0.8.0"
description = "Silvasonic Autonomous Bioacoustic Monitoring System"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "silvasonic-core",
    "silvasonic-controller",
    "silvasonic-processor",
    "silvasonic-recorder",
    "silvasonic-web-mock",
    "silvasonic-db-viewer",
    "silvasonic-birdnet",
]

[tool.uv.workspace]
# UV automatically discovers all Python packages in these directories
members = ["services/*", "packages/*"]
exclude = [
    "services/database",
    "packages/tests",
    "services/gateway",

    "services/web-interface",
    "services/icecast",
    "services/batdetect",
    "services/weather",
    "services/tailscale",
]

[tool.uv.sources]
# Workspace dependencies must be explicitly declared here
silvasonic-core = { workspace = true }
silvasonic-controller = { workspace = true }
silvasonic-processor = { workspace = true }
silvasonic-recorder = { workspace = true }
silvasonic-web-mock = { workspace = true }
silvasonic-db-viewer = { workspace = true }
silvasonic-birdnet = { workspace = true }
silvasonic-test-utils = { workspace = true }


# --- DEVELOPMENT ENVIRONMENT ---

[dependency-groups]
dev = [
    # -- Code Quality & Formatting --
    "beautysh>=6.4.2",
    "djlint>=1.36.4",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
    "rich>=13.0.0",               # Pretty logging in interactive dev terminals (not needed in prod containers)
    "ruff>=0.8.0",
    "yamlfix>=1.19.1",

    # -- Testing Core --
    "httpx>=0.27.0",            # Modern async HTTP client (replaces requests)
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-dotenv>=0.5.2",     # Automatically loads the .env file
    "pytest-mock>=3.15.1",
    "pytest-playwright>=0.5.0", # For E2E frontend tests
    "pytest-timeout>=2.3.1",    # Prevents tests from hanging indefinitely
    "pytest-xdist>=3.5.0",      # Enables parallel testing via 'pytest -n auto'

    # -- Testing Utilities (Mocking & Integration) --
    "faker>=23.0.0",          # Generates realistic dummy data (names, IPs, etc.)
    "minio>=7.2.14",          # Required by testcontainers.minio
    "polyfactory>=2.14.0",    # State-of-the-art factory for Pydantic/SQLAlchemy mocks
    "silvasonic-test-utils",  # Shared testcontainer fixtures (packages/test-utils)
    "structlog>=24.1.0",
    "tenacity>=9.1.2",        # Retry logic for flaky E2E/integration tests
    "testcontainers>=4.14.1", # Generic, without hardcoded database plugins

    # -- Type Stubs --
    "types-aiofiles",
    "types-psutil",
    "types-pyyaml",

    # -- Documentation --
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-swagger-ui-tag>=0.4.0",
    "pygments>=2.20.0",
]


# --- TOOLING CONFIGURATION ---

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".git",
    ".ruff_cache",
    ".venv*",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "D",   # pydocstyle
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D106", # Missing docstring in public nested class
    "B008", # Do not perform function call in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["D101", "D102", "D103"]
"conftest.py" = ["D100", "D101", "D103"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.mypy]
python_version = "3.13"
strict = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]
mypy_path = "scripts:packages/core/src:packages/test-utils/src:services/controller/src:services/processor/src:services/recorder/src:services/web-mock/src:services/db-viewer/src:services/birdnet/src"

[[tool.mypy.overrides]]
module = ["testcontainers.*", "podman", "podman.*", "bcrypt", "yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "uvicorn",
    "uvicorn.*",
    "fastapi",
    "fastapi.*",
    "sse_starlette",
    "sse_starlette.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# FastAPI app.get() decorators return Any when stubs are absent; exempt web-mock
# from the untyped-decorator check rather than pulling in non-upstream stub packages.
module = ["silvasonic.web_mock.*"]
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# Tests: relax strict typing to reduce friction when writing new tests.
# No __init__.py in test dirs → mypy sees each file as top-level module.
module = ["tests", "tests.*", "conftest"]
disallow_untyped_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false


[tool.pytest.ini_options]
minversion = "8.0"
timeout = 30
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# testpaths searches these directories recursively for test_*.py
testpaths = ["tests", "services", "packages"]
python_files = ["test_*.py"]
addopts = "-v --durations=10 --import-mode=importlib"
env_files = [".env"] # Tells pytest-dotenv where the single source of truth is
markers = [
    "unit: fast, isolated tests without external dependencies.",
    "integration: requires external services (DB) to run.",
    "system: full-stack lifecycle tests requiring Podman socket and built images.",
    "system_hw_auto: automated hardware-dependent system tests (real USB mic required, never in CI).",
    "system_hw_manual: interactive hardware system tests (requires manual unplug/replug actions).",
    "e2e: browser tests via playwright running against a full stack.",
    "smoke: quick health checks on built images or deployments.",
]
filterwarnings = [
    # testcontainers uses deprecated @wait_container_is_ready internally
    "ignore::DeprecationWarning:testcontainers",
    # Importing async main() during tests causes harmless "never awaited" noise
    "ignore:coroutine 'main' was never awaited:RuntimeWarning",
    # runpy warns when re-executing a module already in sys.modules (test_main_guard)
    "ignore:.*found in sys.modules.*:RuntimeWarning",
]

[tool.coverage.run]
omit = ["*/tests/*", "tests/*", "*/test_utils/*"]
