[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silvasonic-birdnet"
dynamic = ["version"]
description = "BirdNET inference worker for Silvasonic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "silvasonic-core",
    "ai-edge-litert",
    "numpy",
    "soundfile",
]

[tool.hatch.version]
path = "../../packages/core/src/silvasonic/core/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic"]

[project.scripts]
silvasonic-birdnet = "silvasonic.birdnet.__main__:main"
