[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silvasonic-controller"
description = "Control logic and orchestration service for Silvasonic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["silvasonic-core"]
dynamic = ["version"]

[tool.hatch.version]
path = "src/silvasonic/controller/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic"]
