[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silvasonic-controller"
description = "Control logic and orchestration service for Silvasonic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["silvasonic-core", "podman>=5.0.0", "pyyaml>=6.0", "bcrypt>=4.0", "cryptography>=46.0.5"]
dynamic = ["version"]

[tool.hatch.version]
path = "../../packages/core/src/silvasonic/core/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic"]
