[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "silvasonic-web-mock"
version = "0.2.0"
description = "Silvasonic Web UI mock — full UI shell with hardcoded mock data, no DB required."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    "silvasonic-core",
]

[tool.hatch.build.targets.wheel]
packages = ["src/silvasonic"]
